# xian-playground

./: .env.example  .gitignore  AGENTS.md  README.md  no-gambiarra-policy.txt  pyproject.toml  rxconfig.py
assets/: editor.css
contracting_playground/: __init__.py  contracting_playground.py  state.py
contracting_playground/.contract_state/contract_state/: con_test  save_data  submission  test
contracting_playground/components/: __init__.py  monaco_editor.py
contracting_playground/services/: __init__.py  contracting.py  linting.py
playground/: __init__.py  defaults.py  middleware.py  playground.py  state.py
playground/components/: monaco_editor.py
playground/services/: __init__.py  contracting.py  environment.py  linting.py  runtime.py  sessions.py  worker.py
tests/unit/: test_contract_name_validation.py  test_linting.py  test_middleware.py  test_session_runtime.py  test_sessions.py  test_worker_errors.py
