[project]
name = "xian-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Endogen",email = "Endogen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "reflex (>=0.8.17,<0.9.0)",
    "xian-contracting @ file:///Users/endogen/Projekte/xian-playground/xian-contracting"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
xian-contracting = {develop = true}
